--- a/mainpage/css/style.css
+++ b/mainpage/css/style.css
@@ -66,7 +66,7 @@ span {
 /* Page Parcours */
 .path img{
     object-fit: cover;
-    height: 1200px;
+    height: 1600px;
     width: 100%;
     -webkit-box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
     box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
@@ -74,19 +74,14 @@ span {
 .parcours-title {
     color:rgb(173, 101, 101);
 }
-.bootstrap img{
+.bootstrap img, .vue img{
     object-fit: contain;
     height: 100px;
-    width: 10%;
+    width: 40%;
 }
-.bootstrap {
-    display: flex;
-    justify-content: flex-start;
-}
-.vue img {
-    object-fit: contain;
-    height: 100px;
-    width: 10%;
+.vue, .bootstrap {
+    margin: 0;
+    padding: 0;
 }
 /* Page Contact */
 .contact img {
@@ -96,6 +91,7 @@ span {
     -webkit-box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
     box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
 }
+
 i {
     font-size: 30px;
     margin-right: 10px;
@@ -110,7 +106,7 @@ i {
 /* Page Projets */
 .project img {
     object-fit: cover;
-    height: 1130px;
+    height: 1920px;
     width: 75%;
     -webkit-box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
     box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
