--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,10 @@ span {
 .bootstrap img, .vue img{
     object-fit: contain;
     height: 100px;
-    width: 40%;
+    width: 30%;
+    padding: 10px;
 }
-.vue, .bootstrap {
-    margin: 0;
-    padding: 0;
-}
+
 /* Page Contact */
 .contact img {
     object-fit: cover;
@@ -106,7 +104,7 @@ i {
 /* Page Projets */
 .project img {
     object-fit: cover;
-    height: 1990px;
+    height: 2690px;
     width: 75%;
     -webkit-box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
     box-shadow: 4px 0 5px 0.8px rgba(0,0,0,0.1);
